package com.basic.notes.feature_note.presentation.util

class TestTagCompose {
    companion object {
        const val CONTENT: String = "CONTENT_FIELD"
        const val TITLE: String =  "TITLE_FIELD"
        const val NOTE_ITEM: String =  "NOTE_ITEM"
        const val ORDER_SECTION = "ORDER_SECTION"
    }
}