...
    noteOrder: NoteOrder = NoteOrder.Date(OrderType.Descending),
    onOrderChange: (NoteOrder) -> Unit
) {
    Column(modifier = modifier) {
        Row(Modifier.fillMaxWidth()) {
            DefaultRadioButton(
                text = "Title",
                checked = noteOrder is NoteOrder.Title,
                onChecked = { onOrderChange(NoteOrder.Title(noteOrder.orderType)) })
            Spacer(Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Date",
                checked = noteOrder is NoteOrder.Date,
...
            DefaultRadioButton(
                text = "Ascending",
                checked = noteOrder.orderType is OrderType.Ascending,
                onChecked = { onOrderChange(noteOrder.copy(OrderType.Ascending)) })
            Spacer(Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                checked = noteOrder.orderType is OrderType.Descending,
                onChecked = { onOrderChange(noteOrder.copy(OrderType.Descending)) })
        }
    }
}
