...
        modifier = Modifier.fillMaxSize(),
        snackbarHost = { SnackbarHost(snackBarHostState) },
        floatingActionButton = {
            FloatingActionButton(onClick = {
                navController.navigate(route = Screen.AddEdit.route)
            }) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add")
            }
        }) {
        Column(
            Modifier
                .fillMaxSize()
                .padding(it)
...
            ) {
                Text(text = "Notes", style = MaterialTheme.typography.headlineLarge)

                IconButton(
                    onClick = { viewModel.onEvent(NoteEvent.ToggleOrderSection) },
                ) {
                    Icon(imageVector = Icons.Default.Menu, "Sort")
                }
            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
                enter = fadeIn(),
                exit = fadeOut()
...
