...
        modifier = Modifier.fillMaxSize(),
        snackbarHost = { SnackbarHost(snackBarHostState) },
        floatingActionButton = {
            FloatingActionButton(onClick = {
                viewModel.onEvent(AddEditNoteEvent.SaveNote)
            }) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Save")
            }
        }) {

        Column(
            modifier = Modifier
                .fillMaxSize()
...
